unpackaged/main/default/objects/Pricebook2/fields/Is_Product_Exists__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Product Exists</label>
    <type>Checkbox</type>
</CustomField>