unpackaged/main/default/objects/Pricebook2/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <label>Sales Tax</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>