unpackaged/main/default/objects/Pricebook2/fields/Store_Front_Message__c.field-meta.xml
<CustomField>
    <fullName>Store_Front_Message__c</fullName>
    <label>Store Front Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>