unpackaged/main/default/objects/Pricebook2/listViews/Contractor_NE_2021_PB_1.listView-meta.xml
<ListView>
    <fullName>Contractor_NE_2021_PB_1</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>Contractor NE 2021 PB-1</label>
</ListView>