unpackaged/main/default/objects/Pricebook2/listViews/Tier_volume_Pricing.listView-meta.xml
<ListView>
    <fullName>Tier_volume_Pricing</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.NAME</field>
        <operation>contains</operation>
        <value>T,volume,multi,boss</value>
    </filters>
    <label>Tier -volume Pricing</label>
</ListView>