unpackaged/main/default/objects/Pricebook2/listViews/X2020_Price_Books.listView-meta.xml
<ListView>
    <fullName>X2020_Price_Books</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.DESCRIPTION</field>
        <operation>contains</operation>
        <value>2020,2021</value>
    </filters>
    <label>2020-2021 Price Books</label>
</ListView>